# Quantum-forge-secure-communications-v.3

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TERMS_OF_USE.md
benches/: basic_benchmarks.rs  concurrent_operations_benchmarks.rs  edge_case_benchmarks.rs  milestone_benchmarks.rs  milestone_performance_analysis.rs  ml_kem_performance.rs  performance_regression_benchmarks.rs  quantum_speedup_benchmarks.rs  scalability_benchmarks.rs  stress_testing_benchmarks.rs
config/: production.toml
docs/: ASYMMETRIC_ENCRYPTION_IMPLEMENTATION.md  BLOCKCHAIN_INTEGRATION_REPORT.md  BLOCKCHAIN_MESSAGE_ROUTING_ANALYSIS.md  BLOCKCHAIN_NODE_INTEGRATION.md  CHANNEL_ESTABLISHMENT_OPTIMIZATION_SUMMARY.md  CONCURRENCY_ARCHITECTURE.md  IMPLEMENTATION_GAPS.md  INTEGRATION_SUMMARY.md  MESSAGE_FLOW_DIAGRAM.md  MILESTONE_BENCHMARK_RESULTS.md  ML_KEM_IMPLEMENTATION_SUMMARY.md  MODULE_COUPLING_ANALYSIS.md  NETWORK_TOPOLOGY_DIAGRAM.md  PERFORMANCE_CONSOLIDATION_REPORT.md  PERFORMANCE_PROFILING_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PQC_FIX_SUMMARY.md  PRODUCTION_HARDENING_SUMMARY.md  PRODUCTION_MONITORING_REPORT.md  PRODUCTION_VALIDATION_REPORT.md  QUANTUM_CORE_REIMPLEMENT_REPORT.md  QUANTUM_SPEEDUP_ANALYSIS.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_CONTROLS_MATRIX.md  SECURITY_VALIDATION_REPORT.md  THREAT_MODEL.md  VULNERABILITY_ASSESSMENT.md
examples/: basic_usage.rs  blockchain_node_setup.rs  channel_management.rs  core_performance_benchmark.rs  milestone_validation.rs  minimal_speedup_test.rs  optimized_blockchain_channels.rs  peer_node.rs  performance_analysis.rs  physics_based_fidelity_demo.rs  quantum_entanglement_fidelity_test.rs  quantum_mechanics_validation.rs  quantum_speedup_demo.rs  real_speedup_benchmark.rs  safe_speedup_benchmark.rs  simple_performance_test.rs  simple_speedup_test.rs  system_monitoring.rs
scripts/: deploy_production.sh  network_test_suite.sh  run_end_to_end_tests.sh  run_network_tests_with_peers.ps1  run_network_tests_with_peers.sh  security_audit_runner.sh  setup_peer_infrastructure.sh  start_peer_infrastructure.ps1
src/: consensus_verify.rs  crypto_protocols.rs  error_handling.rs  lib.rs  logging.rs  network_comms.rs  production_monitor.rs  quantum_core.rs  security_foundation.rs  streamlined_client.rs
tests/: blockchain_integration_test.rs  blockchain_message_routing_test.rs  data_transmission_integration_tests.rs  end_to_end_messaging_tests.rs  network_infrastructure_test.rs  performance_validation.rs  user_workflow_tests.rs
