[package]
name = "quantum_forge_secure_comms"
version = "3.0.0"
edition = "2021"
description = "Streamlined Quantum-Enhanced Secure Communications"
authors = ["Quantum Forge Team"]
license = "Apache-2.0"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Cryptography
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
aes-gcm = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"

# NIST Post-Quantum Cryptography (FIPS compliance)
fips203 = "0.4"  # ML-KEM (Kyber replacement)
fips204 = "0.4"  # ML-DSA (Dilithium replacement)  
fips205 = "0.4"  # SLH-DSA (SPHINCS+ replacement)

# Security hardening
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Phase 4 Production Dependencies
# Structured Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.21"

# Advanced Error Handling & Recovery
eyre = "0.6"
color-eyre = "0.6"
backtrace = "0.3"

# Performance Monitoring & Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
once_cell = "1.19"

# Memory Management & Optimization
parking_lot = "0.12"  # High-performance synchronization
dashmap = "5.5"       # Concurrent HashMap
bytes = "1.5"         # Efficient byte handling
smallvec = "1.11"     # Stack-allocated vectors

# Configuration Management
config = "0.13"
dotenvy = "0.15"

# Resource Management
tokio-util = "0.7"
futures = "0.3"

# System Monitoring
sysinfo = "0.30"

# Development and testing
[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
test-log = "0.2"

[features]
default = ["production"]

# Production features
production = ["metrics", "tracing", "performance-monitoring"]

# Development features  
development = ["debug-logging", "test-utils"]

# Feature flags
metrics = []
tracing = []
performance-monitoring = []
debug-logging = []
test-utils = []
hardware = []
simulation = []

# Performance optimization
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Benchmarking profile
[profile.bench]
opt-level = 3
debug = false
lto = true

# Examples are automatically discovered from examples/ directory

[[bench]]
name = "ml_kem_performance"
harness = false

[[bench]]
name = "stress_testing_benchmarks"
harness = false

[[bench]]
name = "edge_case_benchmarks"
harness = false

[[bench]]
name = "performance_regression_benchmarks"
harness = false

[[bench]]
name = "scalability_benchmarks"
harness = false

[[bench]]
name = "basic_benchmarks"
harness = false

[[bench]]
name = "concurrent_operations_benchmarks"
harness = false

[[bench]]
name = "milestone_benchmarks"
harness = false

[[bench]]
name = "milestone_performance_analysis"
harness = false 